--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,10 +13,11 @@ input {
 
 select {
     @apply  outline-none ring-2 p-2 text-teal-800 bg-slate-100 rounded-md mb-2
+
 }
 
 button {
-    @apply w-full md:w-min px-10 md:px-20 py-2 h-min text-white ring-teal-300 ring-2 self-center mt-3 font-semibold italic
+    @apply w-full md:w-max px-10 md:px-20 py-4 h-max text-white ring-teal-300 ring-2 self-center mt-3 font-semibold italic
 }
 
 
